Some additional styling

--- a/pages/index.html
+++ b/pages/index.html
@@ -128,17 +128,18 @@
                         action="https://docs.google.com/forms/d/e/1FAIpQLSdG0Y9m3Blh4fOqaUwe5oO6DbhnFBQbTkQmXkFLpNCcx141Wg/formResponse"
                         method="POST">
 
-                        <label for="fname">Name *</label>
+                        <label for="fname">Name <span class="required-form">*</span></label>
                         <input type="text" id="fname" name="entry.2005620554" placeholder="Your name.." required>
 
-                        <label for="country">E-mail *</label>
+                        <label for="country">E-mail <span class="required-form">*</span></label>
                         <input type="text" name="entry.1045781291" id="" placeholder="example@hotmail.com" required>
 
-                        <label for="subject">Phone number *</label>
+                        <label for="subject">Phone number <span class="required-form">*</span></label>
                         <input type="number" name="entry.1065046570" id="" required>
 
-                        <label>Message *</label>
-                        <textarea rows="5" placeholder="Message*" name="entry.190021963" required></textarea>
+                        <label>Message <span class="required-form">*</span></label>
+                        <textarea rows="5" placeholder="Type your message here..." name="entry.190021963"
+                            required></textarea>
 
                         <input type="submit" name="entry.839337160" value="Submit">
 
