Mobile styling fixed

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,9 +20,9 @@
                 <li><a href="#home"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative"
                             class="logo-header"></a>
                 </li>
-                <li><a href="#service" style="margin-left: 40px;">Service</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="header-li" id="header-li"><a href="#service" style="margin-left: 40px;">Service</a></li>
+                <li class="header-li" id="header-li"><a href="#about">About</a></li>
+                <li class="header-li" id="header-li"><a href="#contact">Contact</a></li>
                 <li class="header-socials"><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li class="header-socials"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 <li class="header-socials"><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
@@ -30,6 +30,19 @@
                     .replace(/DOT/,'.')" style="text-decoration: underline;"><i class="fas fa-envelope"></i></a></li>
             </ul>
         </div>
+    </div>
+
+    <!-- Top Navigation Menu -->
+    <div class="topnav">
+        <a href="#home"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative" class="logo-header" id="logo"></a>
+        <div id="myLinks">
+            <a href="#service" onclick="closeDropdown()">Service</a>
+            <a href="#about" onclick="closeDropdown()">About</a>
+            <a href="#contact" onclick="closeDropdown()">Contact</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
     </div>
 
     <section id="home">
@@ -146,16 +159,16 @@
                     </form>
                 </div>
                 <div class="column">
-                    <img src="../img/illustrations/illu-contact.png" alt="Development image" height="400"
-                        style="float: right;">
+                    <img src="../img/illustrations/illu-contact.png" alt="Development image" class="illustration-img"
+                        height="400" style="float: right;">
                 </div>
             </div>
         </div>
     </section>
 
     <footer>
-        <div class="container" data-aos="fade-down" data-aos-duration="900">
-            <ul class="socials">
+        <div class="container">
+            <ul class=" socials">
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
@@ -177,6 +190,21 @@
     AOS.init({
         once: true, // whether animation should happen only once - while scrolling down
     });
+</script>
+
+<script>
+    function myFunction() {
+        var x = document.getElementById("myLinks");
+        if (x.style.display === "block") {
+            x.style.display = "none";
+        } else {
+            x.style.display = "block";
+        }
+    }
+
+    function closeDropdown() {
+        var x = document.getElementById("myLinks").style.display = "none";
+    }
 </script>
 
 </html>
