--- a/pages/contact-finished.html
+++ b/pages/contact-finished.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row" style="text-align: center;" data-aos="fade-right" data-aos-duration="700">
                 <div class="column">
-                    <img src="../img/KB Creative.png" alt="Logo KB Creative" height="260">
+                    <img src="../img/logo/KB Creative.png" alt="Logo KB Creative" height="260">
                     <h1 class="heading">Contact form success!</h1>
                     <p style="margin: 0 auto; width: 50%;"><b>Thank you </b>for getting in contact with us. We will try
                         respond to your message as soon as possible!</p>
