Minor mobile fixes and optimized through lighthouse

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,7 +9,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Fontawesome import -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <!-- SEO/SERP -->
     <title>KB Creative | Webdesign and Development</title>
+    <meta name="description" content="Agency in Amsterdam that creates and designs full-stack web applications. With a broad skill set ranging from
+    design, development, SEO and much more!">
+    <meta name="keywords" content="Webdesign agency, build website">
+    <meta name="author" content="KB Creative">
 </head>
 
 <body>
@@ -23,8 +28,9 @@
                 <li class="header-li" id="header-li"><a href="#service" style="margin-left: 40px;">Service</a></li>
                 <li class="header-li" id="header-li"><a href="#about">About</a></li>
                 <li class="header-li" id="header-li"><a href="#contact">Contact</a></li>
-                <li class="header-socials"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="header-socials"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="header-socials"><a href="#"><i class="fab fa-instagram" target="_blank"></i></a></li>
+                <li class="header-socials"><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener"
+                        target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li class="header-socials"><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
                     .replace(/AT/,'@')
                     .replace(/DOT/,'.')" style="text-decoration: underline;"><i class="fas fa-envelope"></i></a></li>
@@ -144,14 +150,15 @@
                         <label for="fname">Name <span class="required-form">*</span></label>
                         <input type="text" id="fname" name="entry.2005620554" placeholder="Your name.." required>
 
-                        <label for="country">E-mail <span class="required-form">*</span></label>
-                        <input type="text" name="entry.1045781291" id="" placeholder="example@hotmail.com" required>
+                        <label for="email">E-mail <span class="required-form">*</span></label>
+                        <input type="text" name="entry.1045781291" id="email" placeholder="example@hotmail.com"
+                            required>
 
-                        <label for="subject">Phone number <span class="required-form">*</span></label>
-                        <input type="number" name="entry.1065046570" id="" required>
+                        <label for="phone-number">Phone number <span class="required-form">*</span></label>
+                        <input type="number" name="entry.1065046570" id="phone-number" required>
 
-                        <label>Message <span class="required-form">*</span></label>
-                        <textarea rows="5" placeholder="Type your message here..." name="entry.190021963"
+                        <label for="message">Message <span class="required-form">*</span></label>
+                        <textarea rows="5" placeholder="Type your message here..." id="message" name="entry.190021963"
                             required></textarea>
 
                         <input type="submit" name="entry.839337160" value="Submit">
@@ -170,8 +177,9 @@
         <div class="container">
             <ul class=" socials">
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
+                <li><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="mailto:kbcreativeAThotmailDOTcom" target="_blank" onclick="this.href=this.href
                     .replace(/AT/,'@')
                     .replace(/DOT/,'.')" style="text-decoration: underline;"><i class="fas fa-envelope"></i></a></li>
             </ul>
