--- a/pages/index.html
+++ b/pages/index.html
@@ -15,6 +15,7 @@
     design, development, SEO and much more!">
     <meta name="keywords" content="Webdesign agency, build website">
     <meta name="author" content="KB Creative">
+    <link rel="icon" href="../img/logo/favicon-kb-creative.png" />
 </head>
 
 <body>
@@ -76,7 +77,7 @@
             <div class="row">
                 <div class="column">
                     <div class="card">
-                        <img src="../img/icons/design-icon.png" width="70" alt="Design Icon">
+                        <img src="../img/icons/design-icon.png" loading="lazy" width="70" alt="Design Icon">
                         <h2 class="subheading">Design</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                             has been the industry's standard dummy text ever since the 1500s, </p>
@@ -84,7 +85,7 @@
                 </div>
                 <div class="column">
                     <div class="card">
-                        <img src="../img/icons/dev-icon.png" width="70" alt="Development Icon">
+                        <img src="../img/icons/dev-icon.png" loading="lazy" width="70" alt="Development Icon">
                         <h2 class="subheading">Develop</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                             has been the industry's standard dummy text ever since the 1500s, </p>
@@ -92,7 +93,7 @@
                 </div>
                 <div class="column">
                     <div class="card">
-                        <img src="../img/icons/security-icon.png" width="70" alt="Design Icon">
+                        <img src="../img/icons/security-icon.png" loading="lazy" width="70" alt="Design Icon">
                         <h2 class="subheading">Fullstack</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                             has been the industry's standard dummy text ever since the 1500s, </p>
@@ -121,8 +122,8 @@
                         <a href="#contact" class="primary-btn">Send mail</a>
                     </div>
                     <div class="column">
-                        <img src="../img/illustrations/illu-about.png" alt="Web Development computer" height="300"
-                            style="float: right;">
+                        <img src="../img/illustrations/illu-about.png" loading="lazy" alt="Web Development computer"
+                            height="300" style="float: right;">
                     </div>
                 </div>
             </div>
@@ -155,19 +156,20 @@
                             required>
 
                         <label for="phone-number">Phone number <span class="required-form">*</span></label>
-                        <input type="number" name="entry.1065046570" id="phone-number" required>
+                        <input type="number" name="entry.1065046570" placeholder="0612345678" id="phone-number" required
+                            minlength="10" maxlength="10">
 
                         <label for="message">Message <span class="required-form">*</span></label>
                         <textarea rows="5" placeholder="Type your message here..." id="message" name="entry.190021963"
-                            required></textarea>
+                            required maxlength="500"></textarea>
 
                         <input type="submit" name="entry.839337160" value="Submit">
 
                     </form>
                 </div>
                 <div class="column">
-                    <img src="../img/illustrations/illu-contact.png" alt="Development image" class="illustration-img"
-                        height="400" style="float: right;">
+                    <img src="../img/illustrations/illu-contact.png" loading="lazy" alt="Development image"
+                        class="illustration-img" height="400" style="float: right;">
                 </div>
             </div>
         </div>
