Revert php changes

--- a/pages/contact-finished.html
+++ b/pages/contact-finished.html
@@ -21,7 +21,7 @@
                     <h1 class="heading">Contact form success!</h1>
                     <p class="p-thanks"><b>Thank you </b>for getting in contact with us. We will try
                         respond to your message as soon as possible!</p>
-                    <a href="index.php" class="primary-btn">Back to home</a>
+                    <a href="index.html" class="primary-btn">Back to home</a>
                 </div>
             </div>
         </div>
