--- a/pages/index.html
+++ b/pages/index.html
@@ -23,13 +23,15 @@
     <div class="header">
         <div class="header-content">
             <ul class="header-nav" data-aos="fade-down" data-aos-duration="600">
-                <li><a href="#home"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative" class="logo-header"></a>
+                <li><a href="#home"><img src="../img/logo/KB Creative.png" alt="Logo KB Creative"
+                            class="logo-header"></a>
                 </li>
                 <li class="header-li" id="header-li"><a href="#service" style="margin-left: 40px;">Service</a></li>
                 <li class="header-li" id="header-li"><a href="#about">About</a></li>
                 <li class="header-li" id="header-li"><a href="#contact">Contact</a></li>
                 <li class="header-socials"><a href="#"><i class="fab fa-instagram" target="_blank"></i></a></li>
-                <li class="header-socials"><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                <li class="header-socials"><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener"
+                        target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li class="header-socials"><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
                     .replace(/AT/,'@')
                     .replace(/DOT/,'.')" style="text-decoration: underline;"><i class="fas fa-envelope"></i></a></li>
@@ -63,7 +65,8 @@
                     <a href="#contact" class="primary-btn">Get in touch</a>
                 </div>
                 <div class="column">
-                    <img src="../img/illustrations/illu-dev-design.png" alt="Development image" height="350" style="float: right;">
+                    <img src="../img/illustrations/illu-dev-design.png" alt="Development image" height="350"
+                        style="float: right;">
                 </div>
             </div>
         </div>
@@ -75,26 +78,28 @@
             <div class="row">
                 <div class="column">
                     <div class="card">
-                        <img src="../img/icons/design-icon.png" loading="lazy" width="70" alt="Design Icon">
-                        <h2 class="subheading">Design</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, </p>
+                        <img src="../img/icons/dev-icon.png" loading="lazy" width="70" alt="Design Icon">
+                        <h2 class="subheading">Create</h2>
+                        <p>We create <b>full-stack</b> web solutions. In need of a website where the user needs to sign
+                            up
+                            safely? No problem, we can help you with that!</p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <img src="../img/icons/dev-icon.png" loading="lazy" width="70" alt="Development Icon">
-                        <h2 class="subheading">Develop</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, </p>
+                        <img src="../img/icons/design-icon.png" loading="lazy" width="70" alt="Development Icon">
+                        <h2 class="subheading">Design</h2>
+                        <p>Aside from creating, we design your <b>entire</b> website based on your needs so you don’t
+                            have to hire a
+                            designer or do this yourself. </p>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="../img/icons/security-icon.png" loading="lazy" width="70" alt="Design Icon">
-                        <h2 class="subheading">Fullstack</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s, </p>
+                        <h2 class="subheading">Secure</h2>
+                        <p>In a time where internet security is more important than ever, we make sure your site is
+                            <b>secure</b> using the <b>latest</b> technologies. </p>
                     </div>
                 </div>
             </div>
@@ -108,19 +113,20 @@
                 <div class="row">
                     <div class="column">
                         <h2 class="subheading">Young Professionals</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply
-                            dummy
-                            text of the printing and typesetting industry. <b> Lorem Ipsum
-                                has </b> been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is
-                            simply
-                            dummy
-                            text of the printing and typesetting industry. Lorem Ipsum
-                            has been the industry's standard dummy text ever since the 1500s. </p>
-                        <a href="#contact" class="primary-btn">Send mail</a>
+                        <p>We’re Bruno and Koen, two young professionals with a passion for web development. We met at
+                            the HvA where we both studied Business IT & Management. We bonded over our love for
+                            programming. Both of us have our own area of expertise with Koen focusing on back-end and
+                            databases while Bruno focuses on front-end and user experience. We use our knowledge
+                            acquired during our studies at the Hogeschool van Amsterdam to build a solution that aligns
+                            with your customer and business needs.
+                        </p>
+                        <a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
+                        .replace(/AT/,'@')
+                        .replace(/DOT/,'.')" class="primary-btn">Mail us</a>
                     </div>
                     <div class="column">
-                        <img src="../img/illustrations/illu-about.png" loading="lazy" alt="Web Development computer" height="300" style="float: right;">
+                        <img src="../img/about-us.png" loading="lazy" id="about-img" alt="Web Development computer"
+                            height="350">
                     </div>
                 </div>
             </div>
@@ -139,29 +145,36 @@
                     <script type="text/javascript">
                         var submitted = false;
                     </script>
-                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='contact-finished.html';}"></iframe>
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+                        onload="if(submitted) {window.location='contact-finished.html';}"></iframe>
 
                     <!-- Form submit to Google Forms -->
-                    <form target="hidden_iframe" onsubmit="submitted=true;" action="https://docs.google.com/forms/d/e/1FAIpQLSdG0Y9m3Blh4fOqaUwe5oO6DbhnFBQbTkQmXkFLpNCcx141Wg/formResponse" method="POST">
+                    <form target="hidden_iframe" onsubmit="submitted=true;"
+                        action="https://docs.google.com/forms/d/e/1FAIpQLSdG0Y9m3Blh4fOqaUwe5oO6DbhnFBQbTkQmXkFLpNCcx141Wg/formResponse"
+                        method="POST">
 
                         <label for="fname">Name <span class="required-form">*</span></label>
                         <input type="text" id="fname" name="entry.2005620554" placeholder="Your name.." required>
 
                         <label for="email">E-mail <span class="required-form">*</span></label>
-                        <input type="text" name="entry.1045781291" id="email" placeholder="example@hotmail.com" required>
+                        <input type="text" name="entry.1045781291" id="email" placeholder="example@hotmail.com"
+                            required>
 
                         <label for="phone-number">Phone number <span class="required-form">*</span></label>
-                        <input type="number" name="entry.1065046570" placeholder="0612345678" id="phone-number" required minlength="10" maxlength="10">
+                        <input type="number" name="entry.1065046570" placeholder="0612345678" id="phone-number" required
+                            minlength="10" maxlength="10">
 
                         <label for="message">Message <span class="required-form">*</span></label>
-                        <textarea rows="5" placeholder="Type your message here..." id="message" name="entry.190021963" required maxlength="500"></textarea>
+                        <textarea rows="5" placeholder="Type your message here..." id="message" name="entry.190021963"
+                            required maxlength="500"></textarea>
 
                         <input type="submit" name="entry.839337160" value="Submit">
 
                     </form>
                 </div>
                 <div class="column">
-                    <img src="../img/illustrations/illu-contact.png" loading="lazy" alt="Development image" class="illustration-img" height="400" style="float: right;">
+                    <img src="../img/illustrations/illu-contact.png" loading="lazy" alt="Development image"
+                        class="illustration-img" height="400" style="float: right;">
                 </div>
             </div>
         </div>
@@ -171,8 +184,9 @@
         <div class="container">
             <ul class=" socials">
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                <li><a href="mailto:kbcreativeAThotmailDOTcom" target="_blank" onclick="this.href=this.href
+                <li><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
                     .replace(/AT/,'@')
                     .replace(/DOT/,'.')" style="text-decoration: underline;"><i class="fas fa-envelope"></i></a></li>
             </ul>
