--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
                 <li class="header-li" id="header-li"><a href="#service" style="margin-left: 40px;">Service</a></li>
                 <li class="header-li" id="header-li"><a href="#about">About</a></li>
                 <li class="header-li" id="header-li"><a href="#contact">Contact</a></li>
-                <li class="header-socials"><a href="#"><i class="fab fa-instagram" target="_blank"></i></a></li>
+                <li class="header-socials"><a href="https://www.instagram.com/kbcreative.nl/" rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li class="header-socials"><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener"
                         target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                 <li class="header-socials"><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
@@ -183,7 +183,7 @@
     <footer>
         <div class="container">
             <ul class=" socials">
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/kbcreative.nl/" rel="noopener" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="https://www.linkedin.com/company/kbcreative-nl" rel="noopener" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="mailto:kbcreativeAThotmailDOTcom" onclick="this.href=this.href
